@@ -2,6 +2,7 @@ MPD_sima v0.13.0
 
  * Use of MusicBrainzIdentifier by default
    Please consider tagging your library with these metadata
+ * New virtualenv installer in pure python
 
 -- kaliko jack <kaliko@azylum.org>  UNRELEASED
 
